fix spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,8 @@
 
 svg {
   display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 input[type='range'] {
